tests/test110.rael.exp
Error [tests/test110.rael:7:9]: '^' is outside of a routine and a match statement
|         ^
|         ^
