tests/test110.rael
loop {
    if 1 {
        log 1
        ;
    } else {
        log 2
        ^
    }
}